package lapr.project.model;


/**
 * Class that represents a BstShip
 *
 * @author Rita Ariana Sobral <1201386@isep.ipp.pt>
 */
public class BstShip {



    /**
     * Constructs an empty binary search tree
     */
    public BstShip() {

    }

    /**
     *
     * @param mmsiCode
     * @return
     */
    public Ship getShipByMmsiCode(String mmsiCode){
        return new Ship(); // Para alterar quando o método estiver implementado
    }

}
