package lapr.project.ui.funcionalities;

import lapr.project.controller.ShowPositionalMessagesController;

public class ShowPositionalMessagesUi implements Runnable {

    private ShowPositionalMessagesController showPositionalMessagesController;

    public ShowPositionalMessagesUi(){

        showPositionalMessagesController = new ShowPositionalMessagesController();
    }

    @Override
    public void run() {


    }
}
